# qgroundcontrol

./: .gitmodules  CMakeLists.txt  QGCCommon.pri  QGCExternalLibs.pri  qgroundcontrol.pro  qgroundcontrol.qrc
.github/actions/upload/: action.yml
.github/workflows/: windows_manual.yml  windows_release_manual.yml
cmake/: BuildGstQtPlugin.cmake  CreateMacDMG.cmake  CreateQGCInstaller.cmake  CreateWinInstaller.cmake  DownloadGStreamer.cmake  FindGStreamer.cmake
custom-example/: qgroundcontrol.qrc
libs/BonjourSDK/: About Bonjour SDK.rtf
libs/BonjourSDK/Samples/C/: ClientCommon.c  DNS-SD.manifest  DNS-SD64.manifest  dns-sd.c
libs/BonjourSDK/Samples/CS/DNSServiceBrowser/: DNSServiceBrowser.cs
libs/BonjourSDK/Samples/CS/SimpleChat/: SimpleChat.cs
libs/BonjourSDK/Samples/Java/: BrowserApp.java  SimpleChat.java  SwingBrowseListener.java  SwingDomainListener.java  SwingQueryListener.java  nmakefile
libs/BonjourSDK/Samples/VB/SimpleChat/: SimpleChat.vb
libs/qmlglsink/: CMakeLists.txt
libs/sdl2/: CMakeLists.txt
src/: main.cc
src/API/: QGCCorePlugin.cc
src/Camera/: MavlinkCameraControl.h  QGCCameraIO.cc  QGCCameraIO.h  SimulatedCameraControl.h  VehicleCameraControl.cc  VehicleCameraControl.h
src/Comms/: CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkInterface.cc  LinkManager.cc  LinkManager.h
src/Comms/MockLink/: CMakeLists.txt  MockLink.cc  MockLink.h
src/FlightMap/Widgets/: PhotoVideoControl.qml
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/UI/: MainRootWindow.qml  SettingsPagesModel.qml
src/Vehicle/: Vehicle.cc
src/VideoManager/: GLVideoItemStub.h  VideoManager.cc
src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc
src/VideoReceiver/: CMakeLists.txt
src/api/: QGCCorePlugin.cc
src/comm/: CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkInterface.cc  LinkInterface.h  LinkManager.cc  LinkManager.h  MockLink.cc  MockLink.h
src/ui/: MainRootWindow.qml
test/: UnitTest.qrc
test/FactSystem/: FactSystemTestBase.cc
test/UI/preferences/: CMakeLists.txt
test/ui/preferences/: CMakeLists.txt
